--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@lordicon/react": "^1.10.1",
     "next": "15.0.3",
     "next-theme": "^0.1.5",
     "react": "19.0.0-rc-66855b96-20241106",
