--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next-theme": "^0.1.5",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
-    "react-icons": "^5.4.0"
+    "react-icons": "^5.4.0",
+    "react-simple-typewriter": "^5.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
