--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@lordicon/react": "^1.10.1",
+    "gsap": "^3.13.0",
     "next": "15.0.3",
     "next-theme": "^0.1.5",
     "react": "19.0.0-rc-66855b96-20241106",
