--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@lordicon/react": "^1.10.1",
     "gsap": "^3.13.0",
+    "lenis": "^1.3.3",
     "next": "15.0.3",
     "next-theme": "^0.1.5",
     "react": "19.0.0-rc-66855b96-20241106",
